# real-time-fraud-detection

./: .dockerignore  .env.example  Dockerfile  Makefile  README.example.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  results.json
data/: seed_transactions.csv
demo/: README.md  build_demo.sh
demo/tapes/: 01-stack-health.tape  02-streaming.tape  03-predict.tape  04-blue-green.tape  05-performance.tape  06-resilience.tape  07-container-tests.tape  08-batch.tape  09-profile.tape
deployment/: switch_traffic.sh
docs/: architecture.md  blue_green_design.md  bluegreen_switch_results.json  plan.md  project-prompt.md  report-outline.md  report.docx  report.md
docs/evidence/: kafka-consumer-groups.txt  perf-optimized.json
models/: fraud_model_v1.pkl
screencast/: README.md  build_demo.sh
screencast/tapes/: 01-stack-health.tape  02-streaming.tape  03-predict.tape  04-blue-green.tape  05-performance.tape  06-resilience.tape  07-container-tests.tape  08-batch.tape  09-profile.tape
scripts/: _fmt_batch.py  _fmt_prediction.py  bench_feature_store.py  bg_demo.sh  demo_batch.sh  demo_container.sh  demo_predict.sh  demo_profile.sh  demo_resilience.sh  demo_status.sh  demo_streaming.sh  profile_predict.py
src/: _logging.py  config.py
src/api/: fraud_detector.py  main.py
src/models/: train.py
src/streaming/: feature_processor.py  feature_store.py  transaction_simulator.py
